bp-core/main/default/objects/Outing__c/Outing__c.object-meta.xml
<CustomObject>
    <label>Outing</label>
    <nameField>
        <label>Outing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>