bp-core/main/default/objects/Outing__c/fields/Batters_Faced__c.field-meta.xml
<CustomField>
    <fullName>Batters_Faced__c</fullName>
    <label>Batters Faced</label>
    <summaryForeignKey>Batter__c.Outing__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>