bp-core/main/default/objects/Outing__c/fields/Game__c.field-meta.xml
<CustomField>
    <fullName>Game__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Game</label>
    <referenceTo>Game__c</referenceTo>
    <relationshipLabel>Outings</relationshipLabel>
    <relationshipName>Outings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>