bp-core/main/default/objects/Outing__c/fields/Pitcher__c.field-meta.xml
<CustomField>
    <fullName>Pitcher__c</fullName>
    <label>Pitcher</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only active Pitchers can participate in Outing</errorMessage>
        <filterItems>
            <field>Pitcher__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Only Pitchers who&#39;s status is active are permitted.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Pitcher__c</referenceTo>
    <relationshipLabel>Outings</relationshipLabel>
    <relationshipName>Outings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>