bp-core/main/default/objects/Outing__c/fields/Pitches_Thrown__c.field-meta.xml
<CustomField>
    <fullName>Pitches_Thrown__c</fullName>
    <label>Pitches Thrown</label>
    <summarizedField>Batter__c.Pitches_Thrown__c</summarizedField>
    <summaryForeignKey>Batter__c.Outing__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>