bp-core/main/default/objects/Outing__c/fields/Strikes_Thrown__c.field-meta.xml
<CustomField>
    <fullName>Strikes_Thrown__c</fullName>
    <label>Strikes Thrown</label>
    <summarizedField>Batter__c.Strikes_Thrown__c</summarizedField>
    <summaryForeignKey>Batter__c.Outing__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>